--- a/main.html
+++ b/main.html
@@ -10,7 +10,17 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<form method="post">
+	<label for="name">Name</label>
+	<input type="text" id="name" required>
+	<label for="email">Email</label>
+	<input type="email" id="email" required>
+	<label>Gender</label>
+	<input type="radio" id="gender_m" required>
+	<label for="geender_m">Male</label>
+	<input type="radio" id="gender_f" required>
+	<label for="gender_f">Female</label>
+</form>
 </body>
 
 </html>
