--- a/main.html
+++ b/main.html
@@ -20,6 +20,19 @@
 	<label for="geender_m">Male</label>
 	<input type="radio" id="gender_f" required>
 	<label for="gender_f">Female</label>
+	<label for="cars">Car Brands</label>
+	<select id="cars">
+		<option value="BMW">BMW</option>
+		<option value="Audi">Audi</option>
+		<option value="Mercedez">Mercedez</option>
+	</select>
+	<label for="carade">Car Age</label>
+	<input type="number" id="carage" required>
+	<label for="drop">Date of Purchase (dop)</label>
+	<input type="date" id="drop" required>
+	<label for="password">Password</label>
+	<input type="password" id="pasaword" required>
+	<button type="submit">Submit Button</button>
 </form>
 </body>
 
