--- a/main.html
+++ b/main.html
@@ -16,9 +16,9 @@
 	<label for="email">Email</label>
 	<input type="email" id="email" required>
 	<label>Gender</label>
-	<input type="radio" id="gender_m" required>
+	<input type="radio" name="gender" id="gender_m" required>
 	<label for="geender_m">Male</label>
-	<input type="radio" id="gender_f" required>
+	<input type="radio" name="gender" id="gender_f" required>
 	<label for="gender_f">Female</label>
 	<label for="cars">Car Brands</label>
 	<select id="cars">
@@ -26,12 +26,12 @@
 		<option value="Audi">Audi</option>
 		<option value="Mercedez">Mercedez</option>
 	</select>
-	<label for="carade">Car Age</label>
+	<label for="carage">Car Age</label>
 	<input type="number" id="carage" required>
-	<label for="drop">Date of Purchase (dop)</label>
+	<label for="dop">Date of Purchase (dop)</label>
 	<input type="date" id="drop" required>
 	<label for="password">Password</label>
-	<input type="password" id="pasaword" required>
+	<input type="password" id="password" required>
 	<button type="submit">Submit Button</button>
 </form>
 </body>
